--- a/index.html
+++ b/index.html
@@ -217,24 +217,27 @@
               
                 <div class="work__container bd-grid">
                     <div class="work__img" 
-                         data-title="Project 1: Rummy Shoots" 
-                         data-description="Rummy Shoots is my artistic photography portfolio showcasing creative visuals and storytelling. Built with modern web technologies for a seamless and interactive experience."
-                         data-image="assets/img/rummy-shoots.jpg"
-                         data-medium-link="https://medium.com/your-article-link"
-                         data-github-link="https://github.com/your-github-link">
-                      <img src="assets/img/rummy-shoots.jpg" alt="Project 1">
+                        data-title="Project 1: Rummy Shoots" 
+                        data-description="Rummy Shoots is my artistic photography portfolio showcasing creative visuals and storytelling. Built with modern web technologies for a seamless and interactive experience."
+                        data-image="assets/img/rummy-shoots.jpg"
+                        data-medium-link="https://rummywrites.medium.com/behind-the-lens-building-my-photography-portfolio-c7b4a64b5a06"
+                        data-github-link="https://github.com/MoinulAx/rummy-shoots"
+                        data-deployment-link="https://rummys-portfolio.netlify.app/"> 
+                        <img src="assets/img/rummy-shoots.jpg" alt="Project 1">
                     </div>
+
                     <div class="work__img" 
-                         data-title="Project 2: Mood Parser AI: Moodly" 
-                         data-description="A dynamic portfolio site created using HTML, CSS, and JavaScript to showcase personal projects and work."
-                         data-image="assets/img/mood-parser-ai.jpg"
-                         data-medium-link="https://medium.com/your-article-link"
-                         data-github-link="https://github.com/your-github-link">
-                      <img src="assets/img/mood-parser-ai.jpg" alt="Project 2">
+                        data-title="Project 2: Mood Parser AI: Moodly" 
+                        data-description="The AI Mood Parser detects emotions in text using advanced NLP models, supporting multiple languages and real-time results. It integrates with applications via a scalable API and uses a fine-tuned transformer model like BERT or RoBERTa."
+                        data-image="assets/img/mood-parser-ai.jpg"
+                        data-medium-link="https://rummywrites.medium.com/my-journey-in-creating-a-mood-parsing-model-with-hugging-face-1ddfced00f0e"
+                        data-huggingface-link="https://huggingface.co/RummyAx/Mood-Parser"> 
+                        <img src="assets/img/mood-parser-ai.jpg" alt="Project 2">
                     </div>
+               
                     <div class="work__img" 
                     data-title="Project 3: Mental Health App" 
-                    data-description="A real-time mental health app using React Native, enabling users to track moods, activities, and well-being."
+                    data-description="Patternal is a React Native and Express-based mental health app for fathers. It offers real-time support, mental health tracking, personalized insights, and access to resources, all through a seamless, cross-device interface."
                     data-image="assets/img/patternal.jpg"
                     data-medium-link="https://medium.com/your-article-link"
                     data-github-link="https://github.com/your-github-link">
@@ -252,8 +255,8 @@
                          data-title="Project 5: The Great Farmscape: Mooman" 
                          data-description="An interactive game developed in Unity using C# with immersive gameplay and real-time features."
                          data-image="assets/img/mooman.jpg"
-                         data-medium-link="https://rummywrites.medium.com/building-mooman-the-great-farmscape-my-journey-creating-a-unity-2d-platformer-4e3bdb0511fe"
-                         data-github-link="https://github.com/your-github-link">
+                         data-medium-link="https://rummywrites.medium.com/building-kira-a-smart-chatbot-powered-by-ai-and-nlp-a57339457669"
+                         data-github-link="https://github.com/MoinulAx/MooMan--The-Great-FarmScape/tree/main#running-via-unity">
                       <img src="assets/img/mooman.jpg" alt="Project 4">
                     </div>
                     <div class="work__img" 
