added up0deated popup

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                          data-description="KiraChatbot is an innovative chatbot application designed to assist users with various tasks by providing conversational interactions. Whether it's answering questions, offering recommendations, or providing helpful tips, KiraChatbot offers a seamless and intelligent user experience. Powered by advanced AI technology, KiraChatbot learns from each interaction to offer more personalized responses, making it an invaluable tool for both personal and professional use. "
                          data-image="assets/img/KeraChat.jpg"
                          data-medium-link="https://rummywrites.medium.com/building-kira-a-smart-chatbot-powered-by-ai-and-nlp-a57339457669"
-                         data-github-link="https://github.com/your-github-link">
+                         data-github-link="https://github.com/MoinulAx/KeraChatbot">
                          <img src="assets/img/KeraChat.jpg" alt="Project 3">
                     </div>
 
