--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <a href="https://www.linkedin.com/in/moinul-khan-647535238/" class="footer__icon" title="LinkedIn" target="_blank">
             <i class='bx bxl-linkedin'></i>
         </a>
-        <a href="https://www.instagram.com/" class="footer__icon" title="Instagram" target="_blank">
+        <a href="https://www.instagram.com/rummyshoots/" class="footer__icon" title="Instagram" target="_blank">
             <i class='bx bxl-instagram'></i>
         </a>
         <a href="https://x.com/MoinulAxl" class="footer__icon" title="Twitter" target="_blank">
