Work text change

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                
                     <div class="work__img" 
                         data-title="Project 3: Patternal" 
-                        data-description="Patternal is a mental health app specifically created for fathers, offering real-time emotional support, tracking tools, and resources. Built with React Native, Flask, Express, Python, JS, and JSX, it features a user-friendly interface for connecting with counselors, sharing experiences, and receiving advice from peers. "
+                        data-description="Patternal is a mental health app specifically created for fathers, offering real-time emotional support, tracking tools, and resources. Built with React Native, Flask, Express, Python, JS, and JSX. "
                         data-image="assets/img/patternal.jpg"
                         data-medium-link="https://rummywrites.medium.com/my-flask-api-development-and-model-training-journey-patternal-f87da27e65a5"
                         data-frontend-link="https://github.com/MoinulAx/PATTERNAL-Front-End"
