--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Moinul</h2>
-                        <p class="about__text">Passionate about web and Full Stack Development, I'm also a photographer and musician, expressing creativity through visuals and music. Operating a contracting company specializing in video editing and photography, I collaborate to create compelling visuals. With a curiosity-driven mindset, I explore my path and connect with inspiring individuals. Eager to contribute to meaningful projects. Let's create something great together!</p>           
+                        <h2 class="about__subtitle">Engineering Solutions with Vision</h2>
+                        <p class="about__text">Passionate about web and Full Stack Development, with a creative background in photography and music. Runs a contracting company specializing in video editing and photography, collaborating with clients to produce compelling visual content. Driven by curiosity and a desire to explore new paths, while actively connecting with inspiring individuals. Eager to contribute to impactful projects and build meaningful creative and technical solutions.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -205,7 +205,7 @@
                         <img src="assets/img/work3.jpg" alt="" class="skills__img">
                         <br>
                         <p class="skills__text">
-                            I am proficient in full-stack web development and backend technologies, specializing in Python, JavaScript, and SQL. My certifications and experience highlight my dedication to building scalable and efficient applications.
+                            Proficient in full-stack web development and backend technologies, with a specialization in Python, JavaScript, and SQL. Holds industry certifications and practical experience that reflect a strong commitment to building scalable, efficient, and maintainable applications.
                         </p>
                     </div> 
                 </div>
