--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <img src="assets/img/work3.jpg" alt="" class="skills__img">
                         <br>
                         <p class="skills__text">
-                            Proficient full-stack engineer skilled in JavaScript, Python, and SQL, with experience in React, React Native, Node.js, Express.js, Flask, and Django. Strong backend expertise with PostgreSQL and MongoDB. Certified in Python, Networking, and Web Development.
+                            Proficient full-stack engineer skilled in JavaScript, Python, and SQL, with experience in <b> React, React Native, Node.js, Express.js , Flask, Django and Spring </b>. Strong backend expertise with PostgreSQL and MongoDB. Certified in Python, Networking, and Web Development.
                         </p>
                     </div> 
                 </div>
