--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>                 
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                        <img src="assets/img/aboutpic.png" alt="" class="skills__img">
                         <br>
                         <p class="skills__text">
                             Proficient full-stack engineer skilled in JavaScript, Python, and SQL, with experience in <b> React, React Native, Node.js, Express.js , Flask, Django and Spring </b>. Strong backend expertise with PostgreSQL and MongoDB. Certified in Python, Networking, and Web Development.
