Rummspace section added

--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
                 </div>
             </section>
 
+            <!--===== RUMMSPACE =====-->
+<section class="section rummspace" id="rummspace">
+    <h2 class="section-title">RummSpace</h2>
+
+    <div class="bd-grid rummspace__container">
+        <div class="rummspace__text">
+            <h3 class="rummspace__role">
+                Founder • CEO • Creative Director
+            </h3>
+
+            <p>
+                <strong>RummSpace</strong> is my creative technology company, where I lead
+                engineering, design, and visual direction. The studio focuses on building
+                thoughtful digital products, web experiences, and visual media for brands
+                and creators.
+            </p>
+
+            <p>
+                I oversee all technical architecture, creative strategy, and execution —
+                blending software engineering with storytelling and clean visual identity.
+            </p>
+
+            <a href="https://www.rummspace.com" target="_blank" class="button">
+                Visit RummSpace
+            </a>
+        </div>
+    </div>
+</section>
+
+
             <!--===== WORK =====-->
             <section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
@@ -340,6 +370,7 @@
         <div class="contact__links">
             <a href="mailto:moinulkhan347@gmail.com" class="contact__input">Email: moinulkhan347@gmail.com</a>
             <a href="https://www.linkedin.com/in/moinul-khan-647535238/" target="_blank" rel="noopener noreferrer" class="contact__input">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/moinul-khan-647535238/" target="_blank" rel="noopener noreferrer" class="contact__input">Resume</a>
             <a href="https://moinulax.github.io/" target="_blank" rel="noopener noreferrer" class="contact__input">More ---></a>
 
         </div>
