--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <div class="bd-grid rummspace__container">
         <div class="rummspace__text">
             <h3 class="rummspace__role">
-                Founder • CEO • Creative Director
+                Founder • Creative Director
             </h3>
 
             <p>
@@ -370,7 +370,7 @@
         <div class="contact__links">
             <a href="mailto:moinulkhan347@gmail.com" class="contact__input">Email: moinulkhan347@gmail.com</a>
             <a href="https://www.linkedin.com/in/moinul-khan-647535238/" target="_blank" rel="noopener noreferrer" class="contact__input">LinkedIn</a>
-            <a href="https://www.linkedin.com/in/moinul-khan-647535238/" target="_blank" rel="noopener noreferrer" class="contact__input">Resume</a>
+            <a href="https://docs.google.com/document/d/1HIZyoYWXNrE0EQdhA4lhGTfSUoyEtnWPCCrdRTU1fTM/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="contact__input">Resume</a>
             <a href="https://moinulax.github.io/" target="_blank" rel="noopener noreferrer" class="contact__input">More ---></a>
 
         </div>
