--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/profile-ghilibi_copy.png" alt="" class="about__img-rounded">
+                        <img src="assets/img/work4.jpg" alt="" class="about__img-rounded">
                     </div>
                     
                     <div>
